--- a/styles/components/_nav.scss
+++ b/styles/components/_nav.scss
@@ -142,7 +142,7 @@ nav {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	gap: rem(5);
+	gap: rem(3);
 	opacity: 0;
 	transform: translateX(-100%);
 	visibility: hidden;
@@ -152,9 +152,8 @@ nav {
 		flex-direction: column;
 		align-items: center;
 
-		gap: rem(2);
+		gap: rem(1.5);
 		li {
-			font-size: rem(1.3);
 			position: relative;
 			display: flex;
 			align-items: center;
@@ -162,6 +161,9 @@ nav {
 			@media (min-width: $from-small) {
 				font-size: rem(2.2);
 				gap: rem(6);
+			}
+			a {
+				font-size: rem(1.3);
 			}
 		}
 	}
